--- a/CSS/CSS_Day31.html
+++ b/CSS/CSS_Day31.html
@@ -1,10 +1,11 @@
 <html>
     <head>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
+        <title>Bootstrap</title>
+    </head>
     
     <body>
- <div class="border-primary-lg border-md-secondary border-sm-success border border-2">Hello</div>
+        <div class="border-primary-lg border-md-secondary border-sm-success border border-2">Hello</div>
 
 <div class="row w-100 h-50">
  <div class="col col-lg-3 col-md-4 col-sm-6 col-12 border border-2 fs-6 g-5 bg-success border-success d-flex justify-content-center align-items-center h-100">1</div>
